[plugin-saucelabs] Use SauceLabs SDK API to allocate random port to start SauceConnect (#5123)